--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-* {
- margin: 0;
- padding: 0;
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+  background-color: #FAF7F2;
 }
 
 .banner {
@@ -15,8 +18,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   
   color: white;
   margin-top: 1vw;
@@ -31,7 +34,7 @@
   margin-top: 2vw;
   font-size: 2vw;
   font-family: "Satisfy";
-  color: yellow;
+  color: #FDC913;
 }
 
 .slogan-main,
@@ -45,7 +48,7 @@
 }
 
 .buton {
-  background-color: yellow;
+  background-color: #FDC913;
   padding: 0.5vw 3vw;
   border-radius: 1.6vw;
 }
@@ -60,9 +63,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   padding: 2vw;
   margin: 0 auto;
+  background-color: white;
 }
 
 .icons {
@@ -99,12 +103,14 @@
 .left-card {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .right-card {
   display: flex;
   flex-direction: column;
   row-gap: 0.5vw;
+  position: relative;
 }
 
 .card1 {
@@ -132,12 +138,12 @@
 }
 
 .left-card-text p {
-  font-family: "Quattrocento", serif;
+  font-family: "Quattrocento";
   font-size: 3vw;
   font-weight: bold;
 }
 
-.left-card-text button {
+.left-card-text button, .right-card-top button, .right-card-bot button {
   width: 7vw;
   height: 3vw;
   font-size: 0.7vw;
@@ -151,11 +157,123 @@
   justify-content: center;
 }
 
-.right-card-top, .right-card-bot {
+.right-card-top {
   position: absolute;
-  width: 15vw;
-  height: 10vw;
+  display: flex;
+  flex-wrap: wrap;
+  width: 11vw;
+  height: 7vw;
+  margin: 1vw 1vw;
+  row-gap: 0.7vw;
 }
 
+.right-card-top p {
+  font-size: 1.8vw;
+  color: white;
+  font-family: "Barlow";
+  text-align: left;
+  font-weight: bold;
+}
 
+.right-card-bot {
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  width: 11vw;
+  height: 7vw;
+  margin: 13vw 1vw;
+  row-gap: 0.7vw;
+}
+
+.right-card-bot p {
+  color: black;
+  font-size: 1.7vw;
+  font-family: "Barlow";
+  text-align: left;
+  font-weight: bold;
+}
+
+span {
+  color: red;
+}
+
+.menu-slogan {
+  justify-content: center;
+  text-align: center;
+  margin: 2vw 0;
+  width: 100%;;
+}
+
+.slogan p {
+  font-family: "Barlow";
+  font-weight: bold;
+  font-size: 2vw;
+
+}
+
+.menu-slogan span {
+  font-family: "Satisfy";
+  font-weight: 100;
+}
+
+.pizza-menu {
+  background-color: #FAF7F2;
+  width: 55vw;
+  margin: 0 auto;
+}
+
+.pizza-menu nav {
+  display: flex;
+  justify-content: center;
+  gap: 1vw;
+  background-color: #FAF7F2;
+}
+
+.pizza-menu a {
+  display: flex;
+  align-items: center;
+  gap: 0.5vw;
+  text-decoration: none;
+  font-family: "Barlow";
+  font-size: 0.7vw;
+  color: black;
+  background-color: white;
+  border-radius: 5vw;
+  padding: 0.3vw 1vw;
+  margin: 1vw 0;
+}
+
+.pizza-menu img {
+  width: 2vw;
+}
+
+nav .pizza {
+  background-color: #292929;
+  color: white;
+}
+
+.pizza-card {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 22vw;
+}
+
+.pizza-card1 img , .pizza-card2 img , .pizza-card3 img {
+  width: 100%;
+  height: auto;
+  margin: 1vw auto;
+}
+
+.pizza-card1 , .pizza-card2 , .pizza-card3 {
+  width: 17vw;
+  height: auto;
+  background-color: white;
+}
+
+.terminal {
+  display: flex;
+  justify-content: left;
+  font-size: 2vw;
+}
 
