--- a/style.css
+++ b/style.css
@@ -1,34 +1,31 @@
 html, body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  width: 100%;
   background-color: #FAF7F2;
 }
 
 .banner {
-  position: relative;
+  background-image: url("/public/assets/iteration-1/home-banner.png");
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
 .banner-text {
-  position: absolute;
-  top: 0;
-  left: 0;
+  color: white;
+  padding-top: 2vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  height: 100%;
-  
-  color: white;
-  margin-top: 1vw;
+  row-gap: 1vw;
 }
 
-.logo img {
-  width: 20vw;
-  height: auto;
-  margin: 2vw 0;
+.logo {
+  display: flex;
+  justify-content: center;
 }
 
 .slogan {
@@ -36,16 +33,6 @@ html, body {
   flex-direction: column;
   text-align: center;
   align-items: center;
-  gap: 1vw
-}
-
-.slogan-main {
-  display: flex;
-  flex-wrap: wrap;
-  width: 30vw;
-  font-family: "Roboto Condensed";
-  font-size: 4vw;
-  line-height: 3.5vw;
 }
 
 .slogan-small {
@@ -53,16 +40,21 @@ html, body {
   color: #FDC913;
   font-size: 2vw;
 }
+.slogan-main {
+  font-family: "Roboto Condensed";
+  font-size: 5vw;
+  line-height: 5vw;
+}
 
 .button {
   background-color: #FDC913;
   border-radius: 2vw;
   color: black;
-  padding: 0.5vw 2vw;
+  padding: 1vw 2vw;
   font-size: 1vw;
   font-weight: bold;
   font-family: "Barlow";
-  width: 10vw;
+  text-align: center;
 }
 
 .menu {
@@ -106,38 +98,25 @@ html, body {
   position: relative;
 }
 
-.left-card {
+.left-card, .right-card {
   display: flex;
   flex-direction: column;
   position: relative;
-}
-
-.right-card {
-  display: flex;
-  flex-direction: column;
   row-gap: 0.5vw;
-  position: relative;
+  
 }
 
-.card1 {
-  height: 100%;
-  border-radius: 0.5rem;
-}
 
-.card2 , .card3 {
+.card1, .card2, .card3 {
   height: 100%;
   border-radius: 0.5rem;
 }
 
 .left-card-text {
-  display: flex;
-  flex-wrap: wrap;
   position: absolute;
   color: white;
-  text-align: left;
   width: 15vw;
-  height: 13vw;
-  text-align: left;
+  height: auto;
   padding: 2vw 1vw;
   line-height: 4vw;
   row-gap: 2vw;
@@ -149,7 +128,7 @@ html, body {
   font-weight: bold;
 }
 
-.left-card-text button, .right-card-top button, .right-card-bot button {
+.card button {
   width: 7vw;
   height: 3vw;
   font-size: 0.7vw;
@@ -159,19 +138,22 @@ html, body {
   font-weight: bold;
   display: flex;
   align-items: center;
-  text-align: center;
   justify-content: center;
   border-color: white;
 }
 
-.right-card-top {
+.right-card-bot , .right-card-top {
   position: absolute;
   display: flex;
   flex-wrap: wrap;
   width: 11vw;
   height: 7vw;
-  margin: 1vw 1vw;
+  margin: 13vw 1vw;
   row-gap: 0.7vw;
+}
+
+.right-card-top {
+  margin: 1vw;
 }
 
 .right-card-top p {
@@ -180,16 +162,6 @@ html, body {
   font-family: "Barlow";
   text-align: left;
   font-weight: bold;
-}
-
-.right-card-bot {
-  position: absolute;
-  display: flex;
-  flex-wrap: wrap;
-  width: 11vw;
-  height: 7vw;
-  margin: 13vw 1vw;
-  row-gap: 0.7vw;
 }
 
 .right-card-bot p {
@@ -208,19 +180,19 @@ span {
   justify-content: center;
   text-align: center;
   margin: 2vw 0;
-  width: 100%;;
+  width: 100%;
 }
 
-.slogan p {
+.slogan2 {
   font-family: "Barlow";
   font-weight: bold;
   font-size: 2vw;
 
 }
 
-.menu-slogan span {
+.slogan2 span {
   font-family: "Satisfy";
-  font-weight: 100;
+  font-weight: lighter;
 }
 
 .pizza-menu {
@@ -254,7 +226,7 @@ span {
   width: 2vw;
 }
 
-nav .pizza {
+nav .pizza {   
   background-color: #292929;
   color: white;
 }
@@ -266,7 +238,7 @@ nav .pizza {
   height: 22vw;
 }
 
-.pizza-card1 img , .pizza-card2 img , .pizza-card3 img {
+.pizza-card img {
   width: 80%;
   height: auto;
   margin: 2vw auto;
@@ -378,7 +350,6 @@ footer {
   width: 70%;
   justify-content: space-around;
   text-align: start;
-  
 }
 
 .right-text {
@@ -406,6 +377,237 @@ footer {
   font-size: 0.7vw;
   border-top: 0.1px solid #5F5F5F;
   height: 5vw;
-
 }
 
+@media (max-width: 768px) {
+  
+  .logo {
+    width: 40vw;
+    padding: 3vw 0;
+  }
+
+  .slogan-small {
+    display: none;
+  }
+
+  .slogan-main {
+    width: 45vw;
+    height: auto;
+    font-size: 10vw;
+    line-height: 10vw;
+  }
+
+  .button {
+    width: 20vw;
+    height: auto;
+    margin-top: 6vw;
+    font-size: 2vw;
+  }
+
+  .menu {
+    width: 100vw;
+    height: 15vh;
+  }
+
+  .icons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 60vw;
+  height: 15vh;
+  padding: 2vw 0;
+  row-gap: 2.4vw;
+  }
+
+  .icons a {
+    width: 40%;
+    height: 20%;
+    justify-content: left;
+    align-items: center;
+    font-size: 3vw;
+    gap: 2vw;
+  }
+
+  .icons img {
+    width: 4vw;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card {
+    flex-direction: column;
+    width: 100vw;
+    height: auto;
+    align-items: center;
+  }
+
+  .left-card, .right-card {
+    width: 60%;
+    height: auto;
+  }
+  
+  .left-card-text {
+    width: 50vw;
+    height: 20vh;
+  }
+
+  .left-card-text p {
+    font-size: 10vw;
+    line-height: 10vw;
+    padding-top: 3vw;
+    padding-left: 2vw;
+  }
+
+  .left-card button {
+    width: 25vw;
+    height: 5vh;
+    font-size: 3vw;
+    margin-top: 9vw;
+    border-radius: 5vw;
+  }
+
+  .right-card-top, .right-card-bot {
+    width: 30vw;
+  }
+
+  .right-card-bot {
+    margin-top: 30vw;
+  }
+
+  .right-card-top p, .right-card-bot p {
+    font-size: 4vw;
+  }
+
+  .right-card button {
+    font-size: 1.5vw;
+    width: 15vw;
+    height: 3vh;
+    border-radius: 5vw;
+  }
+
+  .right-card-top button {
+    margin-top: 2vw;
+  }
+
+  .menu-slogan {
+    width: 60vw;
+    height: auto;
+    margin: 0 auto;
+  }
+
+  .slogan2 p{
+    font-size: 5vw;
+  }
+
+  .slogan2-bot{
+    font-size: 8vw;
+  }
+
+  .pizza-menu {
+    background-color: #FAF7F2;
+    width: 60vw;
+    margin: 0 auto;
+  }
+  
+  .pizza-menu nav {
+    display: flex;
+    flex-wrap: wrap;
+    
+    
+  }
+  
+  .pizza-menu a {
+    width: 40%;
+    height: 20%;
+    font-size: 3vw;
+    justify-content: left;
+    align-items: center;
+  }
+  
+  .pizza-menu img {
+    width: 4vw;
+    height: auto;
+  }
+  
+  nav .pizza {   
+    background-color: #292929;
+    color: white;
+  }
+  
+  .pizza-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: auto;
+  }
+  
+  .pizza-card img {
+    width: 100%;
+    margin: 2vw auto;
+  }
+  
+  .pizza-card1 , .pizza-card2 , .pizza-card3 {
+    width: 100%;
+    height: auto;
+  }
+  
+  .pizza-text {
+    display: flex;
+    justify-content: left;
+    font-size: 4vw;
+    font-family: "Barlow";
+    font-weight: bold;
+    margin: 0.5vw 1vw;
+  }
+  
+  
+  .price{
+    display: flex;
+    justify-content: space-between;
+    font-family: "Barlow";
+    font-size: 3vw;
+    margin: 0 1vw;
+  }
+  
+  .price span {
+    color: black;
+    font-weight: bold;
+  }
+  
+  footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .main-top {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .left-side img {
+    width: 100%;
+  }
+
+  .left-side li {
+    width: 60vw;
+    font-size: 4vw;
+    line-height: 4vw;
+    justify-content: left;
+  }
+
+  .left-side li img {
+    width: 6vw;
+    height: auto;
+  }
+
+  .mid {
+    
+  }
+}
+  
